--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-blazecss",
-  "version": "1.0.0",
-  "description": "react-blazecss React component",
+  "version": "0.0.1",
+  "description": "ReactBlazeCSS React component",
   "main": "lib/index.js",
   "jsnext:main": "es6/index.js",
   "files": [
