--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "classnames": "^2.2.5",
     "nwb": "0.9.x",
     "react": "15.x",
-    "react-dom": "15.x"
+    "react-dom": "15.x",
+    "react-waypoint": "^3.1.0"
   },
   "author": "",
   "homepage": "",
