--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "react": "15.x"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "classnames": "^2.2.5",
     "nwb": "0.9.x",
     "react": "15.x",
     "react-dom": "15.x",
+    "react-live-editor": "^5.2.1",
     "react-waypoint": "^3.1.0"
   },
   "author": "",
