--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-blazecss",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "React components for BlazeCSS",
   "main": "lib/index.js",
   "jsnext:main": "es6/index.js",
@@ -26,8 +26,10 @@
     "babel-preset-react": "^6.11.1",
     "blaze": "^2.10.2",
     "classnames": "^2.2.5",
+    "expect-jsx": "^2.6.0",
     "nwb": "0.9.x",
     "react": "15.x",
+    "react-addons-test-utils": "^15.2.1",
     "react-dom": "15.x",
     "react-live-editor": "^5.2.1",
     "react-waypoint": "^3.1.0"
