--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-blazecss",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "React components for BlazeCSS",
   "main": "lib/index.js",
   "jsnext:main": "es6/index.js",
@@ -30,6 +30,7 @@
     "expect-jsx": "^2.6.0",
     "nwb": "0.9.x",
     "react": "15.x",
+    "react-addons-shallow-compare": "^15.3.0",
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "15.x",
     "react-live-editor": "^5.2.1",
