--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "classnames": "^2.2.5",
     "expect-jsx": "^2.6.0",
     "nwb": "0.9.x",
-    "react": "15.x",
+    "react": "^15.2.1",
     "react-addons-shallow-compare": "^15.2.1",
     "react-addons-test-utils": "^15.2.1",
-    "react-dom": "15.x",
+    "react-dom": "^15.2.1",
     "react-live-editor": "^5.2.1",
     "react-waypoint": "^3.1.0"
   },
